added by first task

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -17,3 +17,15 @@ nav li a{
     color:black;
 }
 
+
+nav li .dropdown{
+    display:none;
+    position: absolute;
+    background-color: blueviolet;
+    padding-left: 10px;
+}
+
+nav li:hover > .dropdown{
+    display:block;
+}
+
